--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-02525-g5cfcef8-dirty Configuration
+# Buildroot 2013.02-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -148,11 +148,11 @@ BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 #
 # BR2_GCC_VERSION_4_4_X is not set
 # BR2_GCC_VERSION_4_5_X is not set
-BR2_GCC_VERSION_4_6_X=y
-# BR2_GCC_VERSION_4_7_X is not set
+# BR2_GCC_VERSION_4_6_X is not set
+BR2_GCC_VERSION_4_7_X=y
 # BR2_GCC_VERSION_SNAP is not set
 BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
-BR2_GCC_VERSION="4.6.3"
+BR2_GCC_VERSION="4.7.2"
 BR2_EXTRA_GCC_CONFIG_OPTIONS="--with-fpu=vfpv3 --with-float=hard"
 # BR2_INSTALL_OBJC is not set
 # BR2_INSTALL_FORTRAN is not set
