raumfeld: use uclibc 0.9.33.2

--- a/raumfeld/br2-imgrootfs-geode.config
+++ b/raumfeld/br2-imgrootfs-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-dirty Configuration
+# Buildroot 2013.02-00001-g8e1423a-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arm is not set
@@ -125,11 +125,11 @@ BR2_DEFAULT_KERNEL_HEADERS="3.4.23"
 #
 # uClibc Options
 #
-BR2_UCLIBC_VERSION_0_9_32=y
-# BR2_UCLIBC_VERSION_0_9_33 is not set
+# BR2_UCLIBC_VERSION_0_9_32 is not set
+BR2_UCLIBC_VERSION_0_9_33=y
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
-BR2_UCLIBC_VERSION_STRING="0.9.32.1"
-BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.32.config"
+BR2_UCLIBC_VERSION_STRING="0.9.33.2"
+BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.33.config"
 # BR2_PTHREAD_DEBUG is not set
 # BR2_UCLIBC_INSTALL_TEST_SUITE is not set
 
@@ -937,10 +937,7 @@ BR2_PACKAGE_NCURSES=y
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
 # BR2_PACKAGE_CAN_UTILS is not set
-
-#
-# connman needs a toolchain with IPv6, WCHAR, thread and resolver support
-#
+# BR2_PACKAGE_CONNMAN is not set
 # BR2_PACKAGE_CRDA is not set
 
 #
