raumfeld: re-enable the mpg123 gstreamer plug-in

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-dirty Configuration
+# Buildroot 2013.02-00012-gcbc0e51-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -472,6 +472,7 @@ BR2_PACKAGE_GST_PLUGINS_BAD=y
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FBDEV is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_FAAD is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_LIBMMS is not set
+BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MPG123=y
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_MUSEPACK is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_NEON is not set
 # BR2_PACKAGE_GST_PLUGINS_BAD_PLUGIN_OPUS is not set
