raumfeld: imgrootfs-armada needs the firmware for the Wifi module

--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -514,7 +514,7 @@ BR2_PACKAGE_LINUX_FIRMWARE=y
 # BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V8 is not set
 # BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V9 is not set
 # BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8688 is not set
-# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787 is not set
+BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787=y
 # BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT61 is not set
 # BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT73 is not set
 # BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX is not set
