raumfeld: use XZ compression for the Armada kernel
Using XZ compression results in a much smaller kernel and it
appears to fix the kexec update problem that we have been
observing since we updated buildroot for the 1.12 development
cycle.

Also unselect CONFIG_APPENDED_DTB as this should not be needed.

--- a/raumfeld/kernel-am33xx.config
+++ b/raumfeld/kernel-am33xx.config
@@ -36,9 +36,9 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
-CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-# CONFIG_KERNEL_XZ is not set
+CONFIG_KERNEL_XZ=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -453,7 +453,7 @@ CONFIG_ATAGS=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
-CONFIG_ARM_APPENDED_DTB=y
+# CONFIG_ARM_APPENDED_DTB is not set
 # CONFIG_ARM_ATAG_DTB_COMPAT is not set
 CONFIG_CMDLINE=""
 # CONFIG_XIP_KERNEL is not set
