--- a/raumfeld/kernel-am33xx.config
+++ b/raumfeld/kernel-am33xx.config
@@ -1365,7 +1365,7 @@ CONFIG_PINCTRL=y
 #
 CONFIG_PINMUX=y
 CONFIG_PINCONF=y
-CONFIG_DEBUG_PINCTRL=y
+# CONFIG_DEBUG_PINCTRL is not set
 CONFIG_PINCTRL_SINGLE=y
 # CONFIG_PINCTRL_EXYNOS is not set
 # CONFIG_PINCTRL_EXYNOS5440 is not set
