raumfeld: select gnutls for TLS/SSL support in glib-networking

--- a/package/raumfeld/meta-server/Config.in
+++ b/package/raumfeld/meta-server/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_META_SERVER
 	bool "meta-server"
+	select BR2_PACKAGE_GNUTLS
 	select BR2_PACKAGE_LIBRAUMFELD
 	select BR2_PACKAGE_LIBRAUMFELDCPP
         select BR2_PACKAGE_ISO_CODES
