--- a/package/raumfeld/stream-relay/Config.in
+++ b/package/raumfeld/stream-relay/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_STREAM_RELAY
 	bool "stream-relay"
+	select BR2_PACKAGE_GNUTLS
 	select BR2_PACKAGE_LIBRAUMFELD
 	select BR2_PACKAGE_LIBRAUMFELDCPP
         select BR2_PACKAGE_LIBMMS
