--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00019-gb557a60-dirty Configuration
+# Buildroot 2013.02-00954-g0d78051-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -889,7 +889,8 @@ BR2_PACKAGE_ZLIB=y
 # Crypto
 #
 # BR2_PACKAGE_BEECRYPT is not set
-# BR2_PACKAGE_GNUTLS is not set
+BR2_PACKAGE_GNUTLS=y
+# BR2_PACKAGE_GNUTLS_TOOLS is not set
 # BR2_PACKAGE_LIBGCRYPT is not set
 # BR2_PACKAGE_LIBGPG_ERROR is not set
 # BR2_PACKAGE_LIBMCRYPT is not set
