--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00954-g0d78051-dirty Configuration
+# Buildroot 2013.02-00024-gc8893bb Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -128,7 +128,7 @@ BR2_UCLIBC_VERSION_0_9_32=y
 # BR2_UCLIBC_VERSION_SNAPSHOT is not set
 BR2_UCLIBC_VERSION_STRING="0.9.32.1"
 BR2_UCLIBC_CONFIG="toolchain/uClibc/uClibc-0.9.32.config"
-# BR2_PTHREAD_DEBUG is not set
+BR2_PTHREAD_DEBUG=y
 # BR2_UCLIBC_INSTALL_TEST_SUITE is not set
 BR2_UCLIBC_ARM_TYPE="ARM_CORTEXA8"
 
@@ -163,9 +163,12 @@ BR2_GCC_ENABLE_TLS=y
 #
 # Gdb Options
 #
-# BR2_PACKAGE_GDB is not set
+BR2_PACKAGE_GDB=y
 # BR2_PACKAGE_GDB_SERVER is not set
 # BR2_PACKAGE_GDB_HOST is not set
+# BR2_GDB_VERSION_7_4 is not set
+BR2_GDB_VERSION_7_5=y
+BR2_GDB_VERSION="7.5.1"
 BR2_LARGEFILE=y
 BR2_INET_IPV6=y
 BR2_USE_WCHAR=y
