--- a/raumfeld/rootfs-geode/etc/samba/smb.conf
+++ b/raumfeld/rootfs-geode/etc/samba/smb.conf
@@ -15,6 +15,8 @@ load printers = no
 printcap name = /dev/null
 netbios name = RAUMFELD-BASE
 
+client ntlmv2 auth = no
+
 #============================ Share Definitions ==============================
 idmap uid = 16777216-33554431
 idmap gid = 16777216-33554431
