--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00024-gc8893bb Configuration
+# Buildroot 2013.02-00042-g88b8ed0-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -152,7 +152,7 @@ BR2_BINUTILS_EXTRA_CONFIG_OPTIONS=""
 BR2_GCC_VERSION_4_7_X=y
 # BR2_GCC_VERSION_SNAP is not set
 BR2_GCC_SUPPORTS_FINEGRAINEDMTUNE=y
-BR2_GCC_VERSION="4.7.2"
+BR2_GCC_VERSION="4.7.3"
 BR2_EXTRA_GCC_CONFIG_OPTIONS="--with-fpu=vfpv3 --with-float=hard"
 # BR2_INSTALL_OBJC is not set
 # BR2_INSTALL_FORTRAN is not set
@@ -1248,6 +1248,7 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_RSYNC is not set
 # BR2_PACKAGE_RTORRENT is not set
 BR2_PACKAGE_SAMBA=y
+BR2_PACKAGE_SAMBA_MAX_DEBUGLEVEL=-1
 
 #
 # Samba tools selection
