--- a/package/Config.in
+++ b/package/Config.in
@@ -743,6 +743,7 @@ endif
 source "package/wireless-regdb/Config.in"
 source "package/wireless_tools/Config.in"
 source "package/wpa_supplicant/Config.in"
+source "package/authsae/Config.in"
 source "package/xinetd/Config.in"
 source "package/xl2tp/Config.in"
 
