authsae: minor cleanup
The packages are sorted alphabetically within their category.

Also fix formatting of authsae/Config.in and add a link to the
project page.

--- a/package/authsae/Config.in
+++ b/package/authsae/Config.in
@@ -1,7 +1,10 @@
-
 config BR2_PACKAGE_AUTHSAE
 	bool "authsae"
 	select BR2_PACKAGE_OPENSSL 
 	select BR2_PACKAGE_LIBNL
 	help
-		SAE provides a secure password-based authentication mechanism for 802.11(s). It is resistant to passive attack, active attack, and dictionary attack.
+	  SAE provides a secure password-based authentication mechanism
+	  for 802.11(s). It is resistant to passive attack, active attack
+	  and dictionary attack.
+
+	  http://sourceforge.net/projects/authsae/
