raumfeld: update configurations after addition of authsae

--- a/raumfeld/br2-imgrootfs-geode.config
+++ b/raumfeld/br2-imgrootfs-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00042-g88b8ed0-dirty Configuration
+# Buildroot 2013.02-00049-g28fa7bf-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arm is not set
@@ -929,6 +929,7 @@ BR2_PACKAGE_NCURSES=y
 #
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
+# BR2_PACKAGE_AUTHSAE is not set
 # BR2_PACKAGE_AVAHI is not set
 # BR2_PACKAGE_AXEL is not set
 # BR2_PACKAGE_BLUEZ_UTILS is not set
