--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00042-g88b8ed0-dirty Configuration
+# Buildroot 2013.02-00049-g28fa7bf-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -1010,6 +1010,7 @@ BR2_PACKAGE_SHARED_MIME_INFO=y
 #
 # BR2_PACKAGE_ARGUS is not set
 # BR2_PACKAGE_ARPTABLES is not set
+# BR2_PACKAGE_AUTHSAE is not set
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_AUTOIPD=y
 BR2_PACKAGE_AVAHI_DAEMON=y
