raumfeld: add device-tree files for new Raumfeld One hardware

--- a/raumfeld/dts/Makefile
+++ b/raumfeld/dts/Makefile
@@ -1,7 +1,10 @@
 
 DTC=$(HOSTDIR)/usr/bin/dtc
 
-TARGETS = am33xx-raumfeld-connector-0-0.dtb am33xx-raumfeld-cube-0-0.dtb
+TARGETS = \
+	am33xx-raumfeld-connector-0-0.dtb	\
+	am33xx-raumfeld-cube-0-0.dtb		\
+	am33xx-raumfeld-one-0-0.dtb
 
 all: clean $(TARGETS)
 
