raumfeld: update buildroot configurations

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.02-00049-g28fa7bf-dirty Configuration
+# Buildroot 2013.02-00063-g80d731d-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_arm=y
@@ -760,6 +760,7 @@ BR2_DBUS_LIBXML2=y
 # BR2_PACKAGE_GDISK is not set
 # BR2_PACKAGE_GPSD is not set
 BR2_PACKAGE_GVFS=y
+# BR2_PACKAGE_GVFS_AFP is not set
 # BR2_PACKAGE_HDPARM is not set
 # BR2_PACKAGE_HWDATA is not set
 # BR2_PACKAGE_I2C_TOOLS is not set
