--- a/raumfeld/kernel-am33xx.config
+++ b/raumfeld/kernel-am33xx.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.9.3 Kernel Configuration
+# Linux/arm 3.9.0 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -60,6 +60,7 @@ CONFIG_GENERIC_IRQ_CHIP=y
 CONFIG_IRQ_DOMAIN=y
 # CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_SPARSE_IRQ=y
+# CONFIG_ALWAYS_USE_PERSISTENT_CLOCK is not set
 CONFIG_KTIME_SCALAR=y
 CONFIG_GENERIC_CLOCKEVENTS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
@@ -1627,15 +1628,17 @@ CONFIG_SND_ARM=y
 CONFIG_SND_SOC=y
 # CONFIG_SND_ATMEL_SOC is not set
 CONFIG_SND_AM33XX_SOC=y
-CONFIG_SND_DAVINCI_SOC_MCASP=y
-CONFIG_SND_AM335X_SOC_S800=y
+CONFIG_SND_DAVINCI_SOC_MCASP=m
+CONFIG_SND_AM335X_SOC_S800=m
 # CONFIG_SND_DESIGNWARE_I2S is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_AK4104=y
-CONFIG_SND_SOC_AK5386=y
-CONFIG_SND_SOC_CS4271=y
-CONFIG_SND_SOC_TAS5086=y
+CONFIG_SND_SOC_ADAU1701=m
+CONFIG_SND_SOC_AK4104=m
+CONFIG_SND_SOC_AK5386=m
+CONFIG_SND_SOC_CS4271=m
+CONFIG_SND_SOC_SIGMADSP=m
+CONFIG_SND_SOC_TAS5086=m
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
