raumfeld: another DTS change for the new Raumfeld One

--- a/raumfeld/dts/am33xx-raumfeld-one-0.dtsi
+++ b/raumfeld/dts/am33xx-raumfeld-one-0.dtsi
@@ -99,6 +99,7 @@
 				reg = <0x1b>;
 				reset-gpio = <&gpio1 19 0>;
 				vd-supply = <&vdd_audio>;
+				input-matrix = <1>;
 			};
 
 			adau1701: adau1701@34 {
