--- a/package/raumfeld/Config.in
+++ b/package/raumfeld/Config.in
@@ -1,16 +1,6 @@
 menu "Raumfeld software"
 
-config BR2_PACKAGE_RAUMFELD_REPOSITORY
-	string "raumfeld bazaar repository"
-	default "sftp://rf-bzr.teufel.local/bzr"
-	help
-	  location of the raumfeld bazaar repository 
-
-config BR2_PACKAGE_RAUMFELD_BRANCH
-	string "raumfeld bazaar branch"
-	default "trunk"
-	help
-	  branch to checkout from the bazaar repository
+source "package/raumfeld/raumfeld-repo/Config.in"
 
 source "package/raumfeld/ethwatch/Config.in"
 source "package/raumfeld/libraumfeld/Config.in"
@@ -29,5 +19,5 @@ source "package/raumfeld/raumfeld-dts/Config.in"
 source "package/raumfeld/raumfeld-extract/Config.in"
 source "package/raumfeld/report-daemon/Config.in"
 source "package/raumfeld/web-service/Config.in"
-endmenu
 
+endmenu
