--- a/package/raumfeld/libraumfeld/Config.in
+++ b/package/raumfeld/libraumfeld/Config.in
@@ -5,6 +5,7 @@ config BR2_PACKAGE_LIBRAUMFELD
         select BR2_PACKAGE_OPENSSL
         select BR2_PACKAGE_LIBARCHIVE
         select BR2_PACKAGE_LIBUNWIND
+	select BR2_PACKAGE_RAUMFELD_REPO
 	help
 	  libraumfeld is a utility library for the Raumfeld software stack
 
