--- a/raumfeld/br2-imgrootfs-geode.config
+++ b/raumfeld/br2-imgrootfs-geode.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.05-02615-g91062e0-dirty Configuration
+# Buildroot 2013.05-02618-g39406b6-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -379,10 +379,7 @@ BR2_PACKAGE_GETTEXT=y
 #
 # cegui06 needs a toolchain with C++ and threads
 #
-
-#
-# directfb needs a toolchain with C++ and thread support
-#
+# BR2_PACKAGE_DIRECTFB is not set
 # BR2_PACKAGE_FBDUMP is not set
 # BR2_PACKAGE_FBGRAB is not set
 # BR2_PACKAGE_FBSET is not set
