--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Buildroot 2013.05-02615-g91062e0-dirty Configuration
+# Buildroot 2013.05-02618-g39406b6-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -395,10 +395,6 @@ BR2_PACKAGE_DIRECTFB_JPEG=y
 BR2_PACKAGE_DIRECTFB_PNG=y
 BR2_PACKAGE_DIRECTFB_DITHER_RGB16=y
 # BR2_PACKAGE_DIRECTFB_TESTS is not set
-
-#
-# directfb needs a toolchain with C++ and thread support
-#
 # BR2_PACKAGE_DIRECTFB_EXAMPLES is not set
 # BR2_PACKAGE_DIVINE is not set
 # BR2_PACKAGE_FBDUMP is not set
@@ -1530,38 +1526,9 @@ BR2_LINUX_KERNEL_INSTALL_TARGET=y
 #
 # BR2_LINUX_KERNEL_EXT_XENOMAI is not set
 # BR2_LINUX_KERNEL_EXT_RTAI is not set
-BR2_LEGACY=y
-
-#
-# Legacy detected: check the content of the menu below
-#
 
 #
 # Legacy config options
-#
-
-#
-# Your old configuration uses legacy options that no  
-#
-
-#
-# longer exist in buildroot.                          
-#
-
-#
-# Please look at the options which have been selected 
-#
-
-#
-# and read their help text.                           
-#
-
-#
-# As long as these options stay selected, the build   
-#
-
-#
-# will fail.                                          
 #
 # BR2_sa110 is not set
 # BR2_sa1100 is not set
@@ -1569,7 +1536,7 @@ BR2_LEGACY=y
 # BR2_PACKAGE_GDISK_GDISK is not set
 # BR2_PACKAGE_GDISK_SGDISK is not set
 # BR2_PACKAGE_GDB_HOST is not set
-BR2_PACKAGE_DIRECTB_DITHER_RGB16=y
+# BR2_PACKAGE_DIRECTB_DITHER_RGB16 is not set
 # BR2_PACKAGE_DIRECTB_TESTS is not set
 # BR2_PACKAGE_CUSTOMIZE is not set
 # BR2_PACKAGE_XSERVER_xorg is not set
