raumfeld: another Speaker L hack

--- a/raumfeld/dts/am33xx-raumfeld-speaker-l-0.dtsi
+++ b/raumfeld/dts/am33xx-raumfeld-speaker-l-0.dtsi
@@ -159,7 +159,7 @@
 
 		ak5386: ak5386@0 {
 			compatible = "asahi-kasei,ak5386";
-			/* reset-gpio = <&gpio1 19 0>; */
+			reset-gpio = <&gpio1 22 0>;
 		};
 	};
 
