--- a/package/Config.in
+++ b/package/Config.in
@@ -581,6 +581,7 @@ source "package/argp-standalone/Config.in"
 source "package/boost/Config.in"
 source "package/glibmm/Config.in"
 source "package/gmp/Config.in"
+source "package/google-breakpad/Config.in"
 source "package/gsl/Config.in"
 source "package/gtest/Config.in"
 source "package/libatomic_ops/Config.in"
