uClibc: add patches for user context support
These patch series contain user context support for ARM,
i386 and x86_64. I have pulled them from the ucontext2
branch on https://github.com/ffainelli/uClibc/tree/ucontext

The same set of patches will apply against 0.9.33.2.

Signed-off-by: Sven Neumann <s.neumann@raumfeld.com>

--- a/package/google-breakpad/Config.in
+++ b/package/google-breakpad/Config.in
@@ -1,6 +1,10 @@
 config BR2_PACKAGE_GOOGLE_BREAKPAD
 	bool "google-breakpad"
+	depends on BR2_TOOLCHAIN_BUILDROOT_CONTEXT_FUNCS
 	help
 	  An open-source multi-platform crash reporting system
 
 	  http://code.google.com/p/google-breakpad/
+
+comment "google-breakpad requires a toolchain with context control functions"
+	depends on !BR2_TOOLCHAIN_BUILDROOT_CONTEXT_FUNCS
