raumfeld: update configurations after udev change

--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -1,6 +1,6 @@
 #
-# Automatically generated make config: don't edit
-# Buildroot 2013.05-02618-g39406b6-dirty Configuration
+# Automatically generated file; DO NOT EDIT.
+# Buildroot 2013.05-00001-gfb0d2f9-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -621,13 +621,8 @@ BR2_PACKAGE_UBOOT_TOOLS=y
 # BR2_PACKAGE_UBOOT_TOOLS_MKENVIMAGE is not set
 BR2_PACKAGE_UBOOT_TOOLS_FWPRINTENV=y
 BR2_PACKAGE_UDEV=y
-# BR2_PACKAGE_UDEV_ACL is not set
-# BR2_PACKAGE_UDEV_GUDEV is not set
-# BR2_PACKAGE_UDEV_HWDATA is not set
-# BR2_PACKAGE_UDEV_INTROSPECTION is not set
-# BR2_PACKAGE_UDEV_KEYMAP is not set
-# BR2_PACKAGE_UDEV_MTD is not set
 # BR2_PACKAGE_UDEV_RULES_GEN is not set
+# BR2_PACKAGE_UDEV_ALL_EXTRAS is not set
 # BR2_PACKAGE_UDISKS is not set
 # BR2_PACKAGE_USB_MODESWITCH is not set
 # BR2_PACKAGE_USB_MODESWITCH_DATA is not set
@@ -1344,7 +1339,8 @@ BR2_PACKAGE_DIALOG=y
 # BR2_PACKAGE_CPULOAD is not set
 # BR2_PACKAGE_HTOP is not set
 # BR2_PACKAGE_KEYUTILS is not set
-# BR2_PACKAGE_KMOD is not set
+BR2_PACKAGE_KMOD=y
+# BR2_PACKAGE_KMOD_TOOLS is not set
 # BR2_PACKAGE_MODULE_INIT_TOOLS is not set
 # BR2_PACKAGE_MONIT is not set
 # BR2_PACKAGE_NCDU is not set
