--- a/raumfeld/br2-initramfs-arm.config
+++ b/raumfeld/br2-initramfs-arm.config
@@ -1,6 +1,6 @@
 #
-# Automatically generated make config: don't edit
-# Buildroot 2013.05-02618-g39406b6-dirty Configuration
+# Automatically generated file; DO NOT EDIT.
+# Buildroot 2013.05-00001-gfb0d2f9 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
