raumfeld: update configurations for google-breakpad
Enable google-breakpad on some targets so that we can do some
more testing...

--- a/raumfeld/br2-audioadapter-arm.config
+++ b/raumfeld/br2-audioadapter-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00001-gfb0d2f9-dirty Configuration
+# Buildroot 2013.05-00013-g80c5218-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -191,6 +191,7 @@ BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 # BR2_TOOLCHAIN_BUILDROOT_USE_SSP is not set
+BR2_TOOLCHAIN_BUILDROOT_CONTEXT_FUNCS=y
 # BR2_PTHREADS_NONE is not set
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
@@ -1098,6 +1099,7 @@ BR2_PACKAGE_LIBSOUP_SSL=y
 # BR2_PACKAGE_BOOST is not set
 # BR2_PACKAGE_GLIBMM is not set
 BR2_PACKAGE_GMP=y
+BR2_PACKAGE_GOOGLE_BREAKPAD=y
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 # BR2_PACKAGE_LIBATOMIC_OPS is not set
