--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00001-gfb0d2f9-dirty Configuration
+# Buildroot 2013.05-00013-g80c5218-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -190,6 +190,7 @@ BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_TOOLCHAIN_BUILDROOT_LOCALE=y
 # BR2_TOOLCHAIN_BUILDROOT_CXX is not set
 # BR2_TOOLCHAIN_BUILDROOT_USE_SSP is not set
+# BR2_TOOLCHAIN_BUILDROOT_CONTEXT_FUNCS is not set
 # BR2_PTHREADS_NONE is not set
 # BR2_PTHREADS is not set
 # BR2_PTHREADS_OLD is not set
@@ -981,6 +982,10 @@ BR2_PACKAGE_LIBSOUP=y
 # glibmm requires a toolchain with C++ & WCHAR support enabled
 #
 # BR2_PACKAGE_GMP is not set
+
+#
+# google-breakpad requires a toolchain with C++ and context control functions
+#
 # BR2_PACKAGE_GSL is not set
 
 #
