--- a/package/raumfeld/Config.in
+++ b/package/raumfeld/Config.in
@@ -25,6 +25,7 @@ source "package/raumfeld/meta-server/Config.in"
 source "package/raumfeld/stream-decoder/Config.in"
 source "package/raumfeld/stream-relay/Config.in"
 source "package/raumfeld/loopbacktest/Config.in"
+source "package/raumfeld/raumfeld-dts/Config.in"
 source "package/raumfeld/raumfeld-extract/Config.in"
 source "package/raumfeld/report-daemon/Config.in"
 source "package/raumfeld/web-service/Config.in"
