raumfeld: specifiy a specific commit to use from the dts repository

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1490,7 +1490,7 @@ BR2_PACKAGE_STREAM_RELAY=y
 # BR2_PACKAGE_LOOPBACKTEST is not set
 BR2_PACKAGE_RAUMFELD_DTS=y
 BR2_PACKAGE_RAUMFELD_DTS_REPOSITORY="ssh://git@sources.teufelhome.com/rfs/dts.git"
-BR2_PACKAGE_RAUMFELD_DTS_VERSION="raumfeld-am33xx-3.9"
+BR2_PACKAGE_RAUMFELD_DTS_VERSION="9e8aca5c3feb82ff14e7f09c835f4cb6f891c2dd"
 # BR2_PACKAGE_RAUMFELD_EXTRACT is not set
 BR2_PACKAGE_REPORT_DAEMON=y
 BR2_PACKAGE_WEB_SERVICE=y
