--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00023-g3e1f4ee-dirty Configuration
+# Buildroot 2013.05-00026-ge05cbf8 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1490,7 +1490,7 @@ BR2_PACKAGE_STREAM_RELAY=y
 # BR2_PACKAGE_LOOPBACKTEST is not set
 BR2_PACKAGE_RAUMFELD_DTS=y
 BR2_PACKAGE_RAUMFELD_DTS_REPOSITORY="ssh://git@sources.teufelhome.com/rfs/dts.git"
-BR2_PACKAGE_RAUMFELD_DTS_VERSION="9e8aca5c3feb82ff14e7f09c835f4cb6f891c2dd"
+BR2_PACKAGE_RAUMFELD_DTS_VERSION="raumfeld-am33xx-3.9"
 # BR2_PACKAGE_RAUMFELD_EXTRACT is not set
 BR2_PACKAGE_REPORT_DAEMON=y
 BR2_PACKAGE_WEB_SERVICE=y
@@ -1545,12 +1545,13 @@ BR2_TARGET_ROOTFS_TAR_OPTIONS=""
 BR2_LINUX_KERNEL=y
 # BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_SAME_AS_HEADERS is not set
-BR2_LINUX_KERNEL_CUSTOM_VERSION=y
+# BR2_LINUX_KERNEL_CUSTOM_VERSION is not set
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
-# BR2_LINUX_KERNEL_CUSTOM_GIT is not set
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.9.4"
-BR2_LINUX_KERNEL_VERSION="3.9.4"
-BR2_LINUX_KERNEL_PATCH="raumfeld/kernel-am33xx.diff"
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="ssh://git@sources.teufelhome.com/rfs/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="raumfeld-am33xx-3.9"
+BR2_LINUX_KERNEL_VERSION="raumfeld-am33xx-3.9"
+BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_FIRMWARE="raumfeld/am335x-pm-firmware.bin"
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
