--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -1459,12 +1459,13 @@ BR2_TARGET_ROOTFS_EXT2_NONE=y
 BR2_LINUX_KERNEL=y
 # BR2_LINUX_KERNEL_LATEST_VERSION is not set
 # BR2_LINUX_KERNEL_SAME_AS_HEADERS is not set
-BR2_LINUX_KERNEL_CUSTOM_VERSION=y
+# BR2_LINUX_KERNEL_CUSTOM_VERSION is not set
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
-# BR2_LINUX_KERNEL_CUSTOM_GIT is not set
-BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.9.4"
-BR2_LINUX_KERNEL_VERSION="3.9.4"
-BR2_LINUX_KERNEL_PATCH="raumfeld/kernel-am33xx.diff"
+BR2_LINUX_KERNEL_CUSTOM_GIT=y
+BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="ssh://git@sources.teufelhome.com/rfs/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="raumfeld-am33xx-3.9"
+BR2_LINUX_KERNEL_VERSION="raumfeld-am33xx-3.9"
+BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_FIRMWARE="raumfeld/am335x-pm-firmware.bin"
 # BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
