raumfeld: use included defconfig to configure the Armada kernel

--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2013.05-00026-ge05cbf8 Configuration
+# Buildroot 2013.05-00028-g732c1c5-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 # BR2_arcle is not set
@@ -1490,7 +1490,7 @@ BR2_PACKAGE_STREAM_RELAY=y
 # BR2_PACKAGE_LOOPBACKTEST is not set
 BR2_PACKAGE_RAUMFELD_DTS=y
 BR2_PACKAGE_RAUMFELD_DTS_REPOSITORY="ssh://git@sources.teufelhome.com/rfs/dts.git"
-BR2_PACKAGE_RAUMFELD_DTS_VERSION="raumfeld-am33xx-3.9"
+BR2_PACKAGE_RAUMFELD_DTS_VERSION="9e8aca5c3feb82ff14e7f09c835f4cb6f891c2dd"
 # BR2_PACKAGE_RAUMFELD_EXTRACT is not set
 BR2_PACKAGE_REPORT_DAEMON=y
 BR2_PACKAGE_WEB_SERVICE=y
@@ -1549,13 +1549,13 @@ BR2_LINUX_KERNEL=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="ssh://git@sources.teufelhome.com/rfs/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="raumfeld-am33xx-3.9"
-BR2_LINUX_KERNEL_VERSION="raumfeld-am33xx-3.9"
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="03ef7c6b3ec8333ad033d7088cf9ca1f7717bb09"
+BR2_LINUX_KERNEL_VERSION="03ef7c6b3ec8333ad033d7088cf9ca1f7717bb09"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_FIRMWARE="raumfeld/am335x-pm-firmware.bin"
-# BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="raumfeld/kernel-am33xx.config"
+BR2_LINUX_KERNEL_USE_DEFCONFIG=y
+# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+BR2_LINUX_KERNEL_DEFCONFIG="am33xx_raumfeld"
 BR2_LINUX_KERNEL_UBOOT_IMAGE=y
 BR2_LINUX_KERNEL_UIMAGE=y
 # BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
