--- a/raumfeld/br2-imgrootfs-armada.config
+++ b/raumfeld/br2-imgrootfs-armada.config
@@ -1467,9 +1467,9 @@ BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="raumfeld-am33xx-3.9"
 BR2_LINUX_KERNEL_VERSION="raumfeld-am33xx-3.9"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_FIRMWARE="raumfeld/am335x-pm-firmware.bin"
-# BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="raumfeld/kernel-am33xx.config"
+BR2_LINUX_KERNEL_USE_DEFCONFIG=y
+# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+BR2_LINUX_KERNEL_DEFCONFIG="am33xx_raumfeld"
 BR2_LINUX_KERNEL_UBOOT_IMAGE=y
 BR2_LINUX_KERNEL_UIMAGE=y
 # BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
