--- a/raumfeld/br2-initramfs-armada.config
+++ b/raumfeld/br2-initramfs-armada.config
@@ -1395,13 +1395,13 @@ BR2_LINUX_KERNEL=y
 # BR2_LINUX_KERNEL_CUSTOM_TARBALL is not set
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_GIT_REPO_URL="ssh://git@sources.teufelhome.com/rfs/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="raumfeld-am33xx-3.9"
-BR2_LINUX_KERNEL_VERSION="raumfeld-am33xx-3.9"
+BR2_LINUX_KERNEL_CUSTOM_GIT_VERSION="03ef7c6b3ec8333ad033d7088cf9ca1f7717bb09"
+BR2_LINUX_KERNEL_VERSION="03ef7c6b3ec8333ad033d7088cf9ca1f7717bb09"
 BR2_LINUX_KERNEL_PATCH=""
 BR2_LINUX_KERNEL_FIRMWARE="raumfeld/am335x-pm-firmware.bin"
-# BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="raumfeld/kernel-am33xx.config"
+BR2_LINUX_KERNEL_USE_DEFCONFIG=y
+# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+BR2_LINUX_KERNEL_DEFCONFIG="am33xx_raumfeld"
 BR2_LINUX_KERNEL_UBOOT_IMAGE=y
 BR2_LINUX_KERNEL_UIMAGE=y
 # BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
