--- a/raumfeld/br2-audioadapter-armada.config
+++ b/raumfeld/br2-audioadapter-armada.config
@@ -1481,8 +1481,8 @@ BR2_PACKAGE_LIBRAUMFELDCPP=y
 # BR2_PACKAGE_SLY_TOOLKIT is not set
 # BR2_PACKAGE_REMOTE_CONTROL is not set
 BR2_PACKAGE_MASTER_PROCESS=y
-BR2_PACKAGE_P0_RENDERER=y
-BR2_PACKAGE_P0_TIMESERVER=y
+BR2_PACKAGE_RENDERER=y
+BR2_PACKAGE_TIMESERVER=y
 BR2_PACKAGE_CONFIG_SERVICE=y
 BR2_PACKAGE_META_SERVER=y
 BR2_PACKAGE_STREAM_DECODER=y
