--- a/raumfeld/br2-imgrootfs-geode.config
+++ b/raumfeld/br2-imgrootfs-geode.config
@@ -1301,8 +1301,8 @@ BR2_PACKAGE_RAUMFELD_BRANCH="trunk"
 # BR2_PACKAGE_SLY_TOOLKIT is not set
 # BR2_PACKAGE_REMOTE_CONTROL is not set
 # BR2_PACKAGE_MASTER_PROCESS is not set
-# BR2_PACKAGE_P0_RENDERER is not set
-# BR2_PACKAGE_P0_TIMESERVER is not set
+# BR2_PACKAGE_RENDERER is not set
+# BR2_PACKAGE_TIMESERVER is not set
 # BR2_PACKAGE_CONFIG_SERVICE is not set
 # BR2_PACKAGE_META_SERVER is not set
 # BR2_PACKAGE_STREAM_DECODER is not set
