--- a/raumfeld/br2-remotecontrol-arm.config
+++ b/raumfeld/br2-remotecontrol-arm.config
@@ -1441,8 +1441,8 @@ BR2_PACKAGE_LIBRAUMFELD=y
 BR2_PACKAGE_SLY_TOOLKIT=y
 BR2_PACKAGE_REMOTE_CONTROL=y
 # BR2_PACKAGE_MASTER_PROCESS is not set
-# BR2_PACKAGE_P0_RENDERER is not set
-# BR2_PACKAGE_P0_TIMESERVER is not set
+# BR2_PACKAGE_RENDERER is not set
+# BR2_PACKAGE_TIMESERVER is not set
 # BR2_PACKAGE_CONFIG_SERVICE is not set
 # BR2_PACKAGE_META_SERVER is not set
 # BR2_PACKAGE_STREAM_DECODER is not set
