--- a/package/raumfeld/libraumfeldcpp/Config.in
+++ b/package/raumfeld/libraumfeldcpp/Config.in
@@ -4,6 +4,7 @@ config BR2_PACKAGE_LIBRAUMFELDCPP
 	select BR2_INSTALL_LIBSTDCPP
 	select BR2_PACKAGE_LIBSOUP
 	select BR2_PACKAGE_LIBSOUP_SSL
+	select BR2_PACKAGE_RAUMFELD_REPO
 	help
 	  libraumfeldcpp is a C++ utility library for the Raumfeld software
           stack
