--- a/package/raumfeld/master-process/Config.in
+++ b/package/raumfeld/master-process/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_MASTER_PROCESS
 	bool "master-process"
 	select BR2_PACKAGE_LIBRAUMFELD
+	select BR2_PACKAGE_RAUMFELD_REPO
 	help
 	  Raumfeld master-process
 
