--- a/package/raumfeld/raumfeld-extract/Config.in
+++ b/package/raumfeld/raumfeld-extract/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_RAUMFELD_EXTRACT
 	bool "raumfeld-extract"
         select BR2_PACKAGE_LIBARCHIVE
+        select BR2_PACKAGE_RAUMFELD_REPOSITORY
 	help
 	  raumfeld-extract is a utility to extract an update
 
