--- a/package/raumfeld/web-service/Config.in
+++ b/package/raumfeld/web-service/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_WEB_SERVICE
 	bool "web-service"
 	select BR2_PACKAGE_LIBRAUMFELD
 	select BR2_PACKAGE_LIBRAUMFELDCPP
+	select BR2_PACKAGE_RAUMFELD_REPO
 	help
 	  Raumfeld web-service
 
