--- a/package/raumfeld/loopbacktest/Config.in
+++ b/package/raumfeld/loopbacktest/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_LOOPBACKTEST
 	bool "factory audiotest"
 	select BR2_PACKAGE_ALSA_LIB
 	select BR2_PACKAGE_LIBGLIB2
+        select BR2_PACKAGE_RAUMFELD_REPOSITORY
 	help
 	  Raumfeld factory audiotest
 
