--- a/package/raumfeld/meta-server/Config.in
+++ b/package/raumfeld/meta-server/Config.in
@@ -8,6 +8,7 @@ config BR2_PACKAGE_META_SERVER
         select BR2_PACKAGE_TAGLIB
         select BR2_PACKAGE_TAGLIB_ASF
         select BR2_PACKAGE_TAGLIB_MP4
+	select BR2_PACKAGE_RAUMFELD_REPO
 	help
 	  Raumfeld meta-server
 
