--- a/package/raumfeld/renderer/Config.in
+++ b/package/raumfeld/renderer/Config.in
@@ -4,6 +4,7 @@ config BR2_PACKAGE_RENDERER
 	select BR2_PACKAGE_FLAC
 	select BR2_PACKAGE_LIBRAUMFELD
 	select BR2_PACKAGE_STREAM_DECODER
+	select BR2_PACKAGE_RAUMFELD_REPO
 	help
 	  Raumfeld renderer
 
