--- a/package/raumfeld/report-daemon/Config.in
+++ b/package/raumfeld/report-daemon/Config.in
@@ -1,6 +1,7 @@
 config BR2_PACKAGE_REPORT_DAEMON
 	bool "report-daemon"
 	select BR2_PACKAGE_LIBSOUP
+        select BR2_PACKAGE_RAUMFELD_REPOSITORY
 	help
 	  Raumfeld report-daemon
 
