raumfeld: go back to 3.9 kernel headers
uClibc seems to have problems with the 3.10 kernel headers.
Compilation failed with:

In file included from /var/lib/buildbot/build-armada-1.12/build/output/toolchain/linux/include/linux/kernel.h:4:0,
                 from /var/lib/buildbot/build-armada-1.12/build/output/toolchain/linux/include/linux/netlink.h:4,
                 from /var/lib/buildbot/build-armada-1.12/build/output/toolchain/linux/include/linux/rtnetlink.h:5,
                 from libc/inet/netlinkaccess.h:27,
                 from libc/inet/if_index.c:37:
/var/lib/buildbot/build-armada-1.12/build/output/toolchain/linux/include/linux/sysinfo.h:8:2: error: unknown type name '__kernel_long_t'

--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -118,11 +118,10 @@ BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_KERNEL_HEADERS_3_2 is not set
 # BR2_KERNEL_HEADERS_3_4 is not set
 # BR2_KERNEL_HEADERS_3_8 is not set
-# BR2_KERNEL_HEADERS_3_9 is not set
-BR2_KERNEL_HEADERS_VERSION=y
+BR2_KERNEL_HEADERS_3_9=y
+# BR2_KERNEL_HEADERS_VERSION is not set
 # BR2_KERNEL_HEADERS_SNAP is not set
-BR2_DEFAULT_KERNEL_VERSION="3.10"
-BR2_DEFAULT_KERNEL_HEADERS="3.10"
+BR2_DEFAULT_KERNEL_HEADERS="3.9.4"
 
 #
 # uClibc Options
