--- a/raumfeld/br2-initramfs-geode.config
+++ b/raumfeld/br2-initramfs-geode.config
@@ -118,11 +118,10 @@ BR2_TOOLCHAIN_BUILDROOT=y
 # BR2_KERNEL_HEADERS_3_2 is not set
 # BR2_KERNEL_HEADERS_3_4 is not set
 # BR2_KERNEL_HEADERS_3_8 is not set
-# BR2_KERNEL_HEADERS_3_9 is not set
-BR2_KERNEL_HEADERS_VERSION=y
+BR2_KERNEL_HEADERS_3_9=y
+# BR2_KERNEL_HEADERS_VERSION is not set
 # BR2_KERNEL_HEADERS_SNAP is not set
-BR2_DEFAULT_KERNEL_VERSION="3.10"
-BR2_DEFAULT_KERNEL_HEADERS="3.10"
+BR2_DEFAULT_KERNEL_HEADERS="3.9.4"
 
 #
 # uClibc Options
