raumfeld: p0-timeserver is now called timeserver

--- a/raumfeld/rootfs-audioadapter-arm/etc/master-process/master-process-apps.conf
+++ b/raumfeld/rootfs-audioadapter-arm/etc/master-process/master-process-apps.conf
@@ -31,8 +31,8 @@ METASERVER=load
 WEBSERVICE=load
 
 [TIMESERVER]
-workingdir=../p0-timeserver
-call=../p0-timeserver/p0-timeserver
+workingdir=../timeserver
+call=../timeserver/timeserver
 restart=yes
 
 [CONFIGSERVICE]
@@ -70,8 +70,8 @@ SA_STREAMRELAY=load
 STREAMDECODER=load
 
 [SA_TIMESERVER]
-workingdir=../p0-timeserver
-call=../p0-timeserver/p0-timeserver --network=lo
+workingdir=../timeserver
+call=../timeserver/timeserver --network=lo
 restart=yes
 
 [SA_CONFIGSERVICE]
