--- a/raumfeld/rootfs-geode/etc/master-process/master-process-apps.conf
+++ b/raumfeld/rootfs-geode/etc/master-process/master-process-apps.conf
@@ -23,8 +23,8 @@ METASERVER=load
 WEBSERVICE=load
 
 [TIMESERVER]
-workingdir=../p0-timeserver
-call=../p0-timeserver/p0-timeserver -d -5
+workingdir=../timeserver
+call=../timeserver/timeserver -d -5
 restart=yes
 
 [CONFIGSERVICE]
