Revert "raumfeld: enable AFP support on the Base"
As Apple is about to end support for AFP soon, there is
probably not much point in adding AFP support to our software.

This reverts commit cc805b0c7ba5694718199467da1ea63c5733f62b.

--- a/raumfeld/br2-base-geode.config
+++ b/raumfeld/br2-base-geode.config
@@ -484,7 +484,7 @@ BR2_PACKAGE_DMIDECODE=y
 # BR2_PACKAGE_GPSD is not set
 # BR2_PACKAGE_GPTFDISK is not set
 BR2_PACKAGE_GVFS=y
-BR2_PACKAGE_GVFS_AFP=y
+# BR2_PACKAGE_GVFS_AFP is not set
 # BR2_PACKAGE_HDPARM is not set
 # BR2_PACKAGE_HWDATA is not set
 # BR2_PACKAGE_I2C_TOOLS is not set
@@ -599,8 +599,8 @@ BR2_PACKAGE_ZLIB=y
 # BR2_PACKAGE_CRYPTODEV is not set
 BR2_PACKAGE_GNUTLS=y
 # BR2_PACKAGE_GNUTLS_TOOLS is not set
-BR2_PACKAGE_LIBGCRYPT=y
-BR2_PACKAGE_LIBGPG_ERROR=y
+# BR2_PACKAGE_LIBGCRYPT is not set
+# BR2_PACKAGE_LIBGPG_ERROR is not set
 # BR2_PACKAGE_LIBMCRYPT is not set
 # BR2_PACKAGE_LIBMHASH is not set
 # BR2_PACKAGE_LIBNSS is not set
